# Ejercicios3modulo

./: Eje10_Exploradaor_de_estructuras.py  Eje11_gestor_de_tareas.py  Eje12_analizador_de_datos.py  Eje13_Gestor_de_inventario.py  Eje14_generador_reportes.py  Eje15_mini_sistema_biblioteca.py  Eje3_Contador_de_llamadas.py  Eje4_validacion_de_datos.py  Eje5_Calculadora_de_impuestos.py  Eje6_Modelamiento_de_datos.py  Eje7_filtrado_de_estudiantes.py  Eje8_Transformacion_de_datos.py  Eje9_sumatoria_con_redu.py  Generador_de_perfiles_de_usuario.py  IMC-Ejercicio1.py  README.md  Test_eje4.py  cursos.json  estudiantes.csv  pyproject.toml  test_Eje1.py  test_Eje12.py  test_Eje13.py  test_Eje14.py  test_Eje15.py  test_Eje2.py  test_Eje3.py  test_eje10.py  test_eje11.py  test_eje5.py  test_eje6.py  test_eje7.py  test_eje8.py  test_eje9.py
