[project]
name = "ejercicios-3modulo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"  # Esta línea tiene un guion bajo faltante entre requires y python
dependencies = [
    "pytest>=8.4.2",
    "rich>=13.0.0",
    "ruff>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.0.300",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
